k8s/filecache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filecache
  namespace: scrape-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filecache
  template:
    metadata:
      labels:
        app: filecache
    spec:
      containers:
        - name: filecache
          image: dwilson2547/filecache:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8030
          volumeMounts:
            - name: data
              mountPath: /data/filecache
            - name: config
              mountPath: /app/config.yaml
              subPath: config.yaml
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: filecache-data
        - name: config
          configMap:
            name: filecache-config
---
apiVersion: v1
kind: Service
metadata:
  name: filecache
  namespace: scrape-stack
spec:
  selector:
    app: filecache
  ports:
    - port: 8030
      targetPort: 8030
