k8s/vidcache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vidcache
  namespace: scrape-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vidcache
  template:
    metadata:
      labels:
        app: vidcache
    spec:
      containers:
        - name: vidcache
          image: dwilson2547/vidcache:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8020
          volumeMounts:
            - name: data
              mountPath: /data/vidcache
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vidcache-data
        - name: config
          configMap:
            name: vidcache-config
---
apiVersion: v1
kind: Service
metadata:
  name: vidcache
  namespace: scrape-stack
spec:
  selector:
    app: vidcache
  ports:
    - port: 8020
      targetPort: 8020
