k8s/webcache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcache
  namespace: scrape-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webcache
  template:
    metadata:
      labels:
        app: webcache
    spec:
      containers:
        - name: webcache
          image: dwilson2547/webcache:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data/webcache
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: webcache-data
---
apiVersion: v1
kind: Service
metadata:
  name: webcache
  namespace: scrape-stack
spec:
  selector:
    app: webcache
  ports:
    - port: 8000
      targetPort: 8000
